--- a/quski-oro-rest/src/main/resources/reportes/ActaEntregaHerederos.jrxml
+++ b/quski-oro-rest/src/main/resources/reportes/ActaEntregaHerederos.jrxml
@@ -95,7 +95,7 @@
 		<fieldDescription><![CDATA[nombreAgente]]></fieldDescription>
 	</field>
 	<title>
-		<band height="486" splitType="Stretch">
+		<band height="567" splitType="Stretch">
 			<staticText>
 				<reportElement x="126" y="12" width="300" height="16" uuid="423f258f-f251-42f2-aa61-9245599f1358"/>
 				<textElement>
@@ -125,16 +125,25 @@
 				<text><![CDATA[Static Text]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="1" y="380" width="169" height="20" uuid="a5428771-2256-40b4-88d3-a2ab19861bc8"/>
+				<reportElement positionType="Float" mode="Transparent" x="-1" y="408" width="361" height="20" uuid="a5428771-2256-40b4-88d3-a2ab19861bc8"/>
+				<box>
+					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#FFFFFF"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
 				<textElement>
 					<font fontName="Arial"/>
 				</textElement>
 				<text><![CDATA[Entrega Por: (Quski C.A.)]]></text>
 			</staticText>
 			<textField isStretchWithOverflow="true">
-				<reportElement positionType="Float" x="0" y="431" width="169" height="20" uuid="e286a6aa-db22-47ce-bd27-2988cbc04074"/>
+				<reportElement positionType="Float" x="-1" y="435" width="361" height="20" uuid="e286a6aa-db22-47ce-bd27-2988cbc04074"/>
 				<box>
-					<topPen lineWidth="1.0"/>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textElement textAlignment="Justified" markup="html">
 					<font fontName="Arial"/>
@@ -142,7 +151,7 @@
 				<textFieldExpression><![CDATA[$P{BEAN_DS}.getNombreAsesor() +"/Firma"]]></textFieldExpression>
 			</textField>
 			<componentElement>
-				<reportElement x="27" y="280" width="439" height="80" uuid="f1de7d70-de1e-4e67-848e-a4eb4b0121b2">
+				<reportElement x="10" y="260" width="480" height="120" uuid="f1de7d70-de1e-4e67-848e-a4eb4b0121b2">
 					<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.VerticalRowLayout"/>
 					<property name="com.jaspersoft.studio.table.style.table_header" value="Table_TH"/>
 					<property name="com.jaspersoft.studio.table.style.column_header" value="Table_CH"/>
@@ -154,11 +163,11 @@
 							<datasetParameterExpression><![CDATA[new net.sf.jasperreports.engine.data.JRBeanCollectionDataSource($P{LIST_DS})]]></datasetParameterExpression>
 						</datasetParameter>
 					</datasetRun>
-					<jr:column width="140" uuid="c0618ac5-89f6-4255-8a91-082050ccac52">
+					<jr:column width="290" uuid="c0618ac5-89f6-4255-8a91-082050ccac52">
 						<property name="com.jaspersoft.studio.components.table.model.column.name" value="Column1"/>
 						<jr:detailCell height="150">
 							<textField>
-								<reportElement x="0" y="0" width="140" height="150" uuid="a0162f89-1a0e-4b9f-9427-4b055ada03b4"/>
+								<reportElement x="0" y="0" width="290" height="75" uuid="a0162f89-1a0e-4b9f-9427-4b055ada03b4"/>
 								<box>
 									<pen lineWidth="1.0"/>
 									<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -167,11 +176,17 @@
 									<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 								</box>
 								<textElement markup="html"/>
-								<textFieldExpression><![CDATA["<br>"+$F{campoCompleto}]]></textFieldExpression>
+							</textField>
+							<textField>
+								<reportElement x="0" y="75" width="290" height="75" uuid="fe7c6dd9-5f68-45f4-aa47-432a747f6b6f"/>
+								<box>
+									<topPen lineWidth="1.0"/>
+								</box>
+								<textFieldExpression><![CDATA["<br>"+ $F{campoCompleto}]]></textFieldExpression>
 							</textField>
 						</jr:detailCell>
 					</jr:column>
-					<jr:column width="170" uuid="c6cd111d-ff2a-41d1-8bc1-c946da874feb">
+					<jr:column width="90" uuid="c6cd111d-ff2a-41d1-8bc1-c946da874feb">
 						<property name="com.jaspersoft.studio.components.table.model.column.name" value="Column2"/>
 						<jr:detailCell height="150">
 							<box>
@@ -182,7 +197,7 @@
 							</box>
 						</jr:detailCell>
 					</jr:column>
-					<jr:column width="200" uuid="29011bff-2316-4da2-8c94-cc590e072967">
+					<jr:column width="82" uuid="29011bff-2316-4da2-8c94-cc590e072967">
 						<property name="com.jaspersoft.studio.components.table.model.column.name" value="Column3"/>
 						<jr:detailCell height="150">
 							<box>
@@ -192,10 +207,10 @@
 								<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 							</box>
 							<rectangle>
-								<reportElement x="0" y="0" width="200" height="110" uuid="6382eae1-bd8b-4e51-84b9-9a47e0d620a0"/>
+								<reportElement x="0" y="0" width="82" height="75" uuid="6382eae1-bd8b-4e51-84b9-9a47e0d620a0"/>
 							</rectangle>
 							<staticText>
-								<reportElement x="0" y="110" width="200" height="40" uuid="bd4ddbe5-a794-4ca9-af8f-2ef4ccffb8a5"/>
+								<reportElement x="0" y="75" width="82" height="75" uuid="bd4ddbe5-a794-4ca9-af8f-2ef4ccffb8a5"/>
 								<textElement textAlignment="Center"/>
 								<text><![CDATA[HUELLA]]></text>
 							</staticText>
@@ -204,7 +219,7 @@
 				</jr:table>
 			</componentElement>
 			<textField isStretchWithOverflow="true">
-				<reportElement positionType="Float" x="0" y="451" width="169" height="20" uuid="6e27fa34-8458-4937-9a7e-806cb871e0a9"/>
+				<reportElement positionType="Float" x="0" y="457" width="360" height="20" uuid="6e27fa34-8458-4937-9a7e-806cb871e0a9"/>
 				<textElement textAlignment="Justified" markup="html">
 					<font fontName="Arial"/>
 				</textElement>
